Some updates on readme and notebook

--- a/HE-Capstone-Final.ipynb
+++ b/HE-Capstone-Final.ipynb
@@ -331,7 +331,7 @@
    "id": "b6586851",
    "metadata": {},
    "source": [
-    "We need to do some data clean-up and filtering for this **Stock data**:\n",
+    "We need to do some data ***clean-up*** and filtering for this **Stock data**:\n",
     "- Only interested in Tesla data, so we need to filter all rows only for 'TSLA'\n",
     "- Remove 'Close' column and rename 'Adj Close' to 'value' and other columns to lower case.\n",
     "- Need to filter the rows only for dates from 10/1/2021 to 5/31/2022 because our twitter data only has this time period\n",
@@ -794,7 +794,7 @@
    "id": "5833ff6a",
    "metadata": {},
    "source": [
-    "We need to do some data clean-up and filtering for this **Macro Economics** data:\n",
+    "We need to do some data ***clean-up*** and filtering for this **Macro Economics** data:\n",
     "- Need to filter the rows only for dates from 10/1/2021 to 5/31/2022 because our twitter data only has this time period\n",
     "- Drop un-needed columns, rename some of columns and make it lower case\n",
     "- Since the data is monthly and we need to join this data with other dataset, we need to duplicate the data into daily data for the same month"
@@ -1352,7 +1352,7 @@
    "id": "8ad0c7b9",
    "metadata": {},
    "source": [
-    "We need to do some data clean-up and filtering for this **Twitter** data:\n",
+    "We need to do some data ***clean-up*** and filtering for this **Twitter** data:\n",
     "- Need to filter the rows only for dates from 10/1/2021 to 5/31/2022 because our twitter data only has this time period\n",
     "- rename some of columns and make it lower case\n",
     "- Clean-up some un-wanted character or text such as \\n, &amp;, etc."
@@ -3177,9 +3177,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b73a193d",
+   "metadata": {},
+   "source": [
+    "## Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d27da25",
+   "metadata": {},
+   "source": [
+    "- The result of all of the algorithms in this current report are better then my previous report. One of the main reasons is I made a mistake in calculating the average of the sentiment results for several tweets for the same day. I fixed it in this current notebook.\n",
+    "- In order to combine all datasets that include the Macro Economic data, I need to duplicate the Macro Economic data for the same month into daily data, this duplicate data may affect the accuracy result.\n",
+    "- I don't have enough data, I think I may need to collect more data perhaps using twitter API so I can more variety of sentiments data where it has higher positive and negative sentiments with lower neutral sentiment.\n",
+    "- There are still some rooms to fine tune the GridSearchCV parameters to get higher score specifically SVC that currently has the highest score.\n",
+    "- I can experiment with a different stock ticker to see if other tickers may be more sensitive and affected by user sentiments and macro economics data.\n",
+    "- In summary, the up & down of stock price in this analysis somewhat is affected by user sentiments as shown in several of my charts above (regarding user sentiments) and there are several things that we can do to improve as described in several previous bullet points.\n",
+    "- I think with the combination usage of neural network algorithm, we may be able to predict future stock values instead of just predicting if it goes up or down."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6a05706",
+   "id": "0a005fb4",
    "metadata": {},
    "outputs": [],
    "source": []
