Updates on notebook

--- a/HE-Capstone-Final.ipynb
+++ b/HE-Capstone-Final.ipynb
@@ -3178,6 +3178,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6dd1d736",
+   "metadata": {},
+   "source": [
+    "## Findings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6505e968",
+   "metadata": {},
+   "source": [
+    "- The result of all of the algorithms in this current report are better then my previous report. One of the main reasons is I made a mistake in calculating the average of the sentiment results for several tweets for the same day. I fixed it in this current notebook.\n",
+    "- In order to combine all datasets that include the Macro Economic data, I need to duplicate the Macro Economic data for the same month into daily data, this duplicate data may affect the accuracy result.\n",
+    "- I don't have enough data, I think I may need to collect more data perhaps using twitter API so I can more variety of sentiments data where it has higher positive and negative sentiments with lower neutral sentiment.\n",
+    "- There are still some rooms to fine tune the GridSearchCV parameters to get higher score specifically SVC that currently has the highest score.\n",
+    "- I can experiment with a different stock ticker to see if other tickers may be more sensitive and affected by user sentiments and macro economics data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b73a193d",
    "metadata": {},
    "source": [
@@ -3189,12 +3209,7 @@
    "id": "0d27da25",
    "metadata": {},
    "source": [
-    "- The result of all of the algorithms in this current report are better then my previous report. One of the main reasons is I made a mistake in calculating the average of the sentiment results for several tweets for the same day. I fixed it in this current notebook.\n",
-    "- In order to combine all datasets that include the Macro Economic data, I need to duplicate the Macro Economic data for the same month into daily data, this duplicate data may affect the accuracy result.\n",
-    "- I don't have enough data, I think I may need to collect more data perhaps using twitter API so I can more variety of sentiments data where it has higher positive and negative sentiments with lower neutral sentiment.\n",
-    "- There are still some rooms to fine tune the GridSearchCV parameters to get higher score specifically SVC that currently has the highest score.\n",
-    "- I can experiment with a different stock ticker to see if other tickers may be more sensitive and affected by user sentiments and macro economics data.\n",
-    "- In summary, the up & down of stock price in this analysis somewhat is affected by user sentiments as shown in several of my charts above (regarding user sentiments) and there are several things that we can do to improve as described in several previous bullet points.\n",
+    "- The up & down of stock price in this analysis somewhat is affected by user sentiments as shown in several of my charts above (regarding user sentiments) and there are several things that we can do to improve as described in several previous bullet points.\n",
     "- I think with the combination usage of neural network algorithm, we may be able to predict future stock values instead of just predicting if it goes up or down."
    ]
   },
